--- a/portfolio_using_bootstrap.css
+++ b/portfolio_using_bootstrap.css
@@ -3,7 +3,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
   }
-  .container{
+  .des{
     font-weight:500;
     background-color: white;
     opacity: 0.6;
